Task-1/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/subnets: subnet-0452095395ad959b8,subnet-08e10d4472bbc82bc
    alb.ingress.kubernetes.io/load-balancer-name: k8s-alb
    alb.ingress.kubernetes.io/group.name: k8s-alb
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: nginx-proxy
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 80
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 80
